# Morph-Bench

./: .gitignore  .zenodo.json  AGENTS.md  AUDITOR_PLAYBOOK.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_POLICY.md  GOVERNANCE.md  GPD_BOOTSTRAP_GUIDE.md  LICENSE  LICENSE_PLACEHOLDER.md  NOTICE  NOTICE.md  PRD_GNOSIS_MORPH_BENCH_2026-04-23.md  PRIVATE_INTERNAL_LICENSE_NOTICE.md  PUBLIC_AUDIT_LIMITS.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SMOKE_TESTS.md  SOURCE_BOUNDARY.md  STARTUP_PROMPT.md  THIRD_PARTY_NOTICES.md  TODO.md  TRADEMARKS.md  UNIVERSAL_STARTUP_PROMPT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  evidence_dispute.md  feature_request.md  question.md
.github/workflows/: ci.yml  publish.yml
.gpd/: CONVENTIONS.md  DECISIONS.md  NOTATION_GLOSSARY.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  state.json
.gpd/phases/: README.md
_internal/: AUTONOMOUS_EXECUTION_POLICY.md  MIGRATION_PLAN.md  TEMPLATE_USAGE.md  WORKSTREAM_GPD_INIT_CHECKLIST.md
code/: README.md
docs/: ARCHITECTURE.md  CURRENT_PUBLIC_STATUS.md  FAQ.md  HF_CUSTODY_REGISTER.md  HF_STORAGE.md  LEGAL_BOUNDARIES.md  LEGAL_REVIEW_PREP.md  PROMOTION_READINESS.md  README.md  STATUS_REPORT_2026-04-24.md  SUPPORT.md
fixtures/: tiny_benchmark_manifest.json
tests/: conftest.py  test_adapter_contract_coverage.py  test_adapter_indus_phase4.py  test_cli_phase4_like.py  test_cli_smoke.py  test_forbidden_patterns.py  test_hf_cache.py  test_replay_record.py  test_stability_modes.py
(+44 files in other folders)
