[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnosis-morph-bench"
version = "0.1.0"
description = "Benchmark-first starter package for neutral route scoring, replay, and stability checks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scikit-learn>=1.5",
]

[project.scripts]
gnosis-morph-bench-smoke = "gnosis_morph_bench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
