[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnosis-morph-bench"
version = "0.1.0"
description = "Benchmark-first starter package for neutral route scoring, replay, and stability checks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "numpy>=1.26",
  "scikit-learn>=1.5",
]

[project.urls]
Homepage = "https://github.com/Zer0pa/Morph-Bench"
Repository = "https://github.com/Zer0pa/Morph-Bench"
Issues = "https://github.com/Zer0pa/Morph-Bench/issues"

[project.scripts]
gnosis-morph-bench-smoke = "gnosis_morph_bench.cli:main"
gnosis-morph-bench-adapter-indus-phase4 = "gnosis_morph_bench.adapters.indus_phase4:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
